[gd_scene load_steps=23 format=3 uid="uid://dky100pma11ld"]

[ext_resource type="Script" uid="uid://kqr1ft0hvgfe" path="res://entities/terrain/door.gd" id="1_i7dw7"]
[ext_resource type="Texture2D" uid="uid://bpvdelorig0a7" path="res://texture/kq_sprite_0006_door_open.png" id="2_l50cf"]
[ext_resource type="Texture2D" uid="uid://c7jaxktprptp" path="res://texture/kq_sprite_0005_door_closed.png" id="3_de14m"]
[ext_resource type="Texture2D" uid="uid://cpaqa7itrr7k" path="res://texture/kq_sprite_0003_door_bolt.png" id="4_lawn3"]
[ext_resource type="Texture2D" uid="uid://dgcbu1f30rmw2" path="res://texture/kq_sprite_0002_door_lock.png" id="5_d61lu"]
[ext_resource type="AudioStream" uid="uid://ckvymrgxh02iv" path="res://audio/qubodup-DoorClose01.ogg" id="6_lawn3"]
[ext_resource type="AudioStream" uid="uid://hkkf5772o4uw" path="res://audio/qubodup-DoorOpen01.ogg" id="6_rrf83"]
[ext_resource type="AudioStream" uid="uid://ctibdhdny14kb" path="res://audio/qubodup-DoorClose02.ogg" id="7_d61lu"]
[ext_resource type="AudioStream" uid="uid://p2ocpwxoigav" path="res://audio/qubodup-DoorOpen02.ogg" id="7_vrqlg"]
[ext_resource type="AudioStream" uid="uid://bvvtqcvim8iuy" path="res://audio/qubodup-DoorClose03.ogg" id="8_rrf83"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrf83"]
size = Vector2(117, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vrqlg"]
size = Vector2(64, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rs5pt"]
size = Vector2(56, 26)

[sub_resource type="Animation" id="Animation_kw2sj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteDoor:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_l50cf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteLock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteBolt:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DoorEnterShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LockBody/LockShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:locked")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".:open")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_vrqlg"]
playback_mode = 1
random_pitch = 1.05
streams_count = 3
stream_0/stream = ExtResource("6_lawn3")
stream_1/stream = ExtResource("7_d61lu")
stream_2/stream = ExtResource("8_rrf83")

[sub_resource type="Animation" id="Animation_i7dw7"]
resource_name = "close"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteDoor:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_de14m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DoorEnterShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LockBody/LockShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": SubResource("AudioStreamRandomizer_vrqlg")
}],
"times": PackedFloat32Array(0.2)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_7vvuq"]
resource_name = "close"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteDoor:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_de14m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DoorEnterShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LockBody/LockShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:open")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_jrbiw"]
resource_name = "locked"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBolt:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteLock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpriteDoor:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_de14m")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DoorEnterShape:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("LockBody/LockShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:locked")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_rs5pt"]
random_pitch = 1.05
streams_count = 2
stream_0/stream = ExtResource("6_rrf83")
stream_1/stream = ExtResource("7_vrqlg")

[sub_resource type="Animation" id="Animation_bclac"]
resource_name = "open"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteDoor:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_l50cf")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DoorEnterShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("LockBody/LockShape:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer2D")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": SubResource("AudioStreamRandomizer_rs5pt")
}],
"times": PackedFloat32Array(0.2)
}
tracks/3/use_blend = true

[sub_resource type="Animation" id="Animation_l67we"]
resource_name = "unlock"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBolt:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.766667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteLock:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.266667),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:locked")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.933333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1issr"]
_data = {
&"RESET": SubResource("Animation_kw2sj"),
&"close": SubResource("Animation_i7dw7"),
&"closed": SubResource("Animation_7vvuq"),
&"locked": SubResource("Animation_jrbiw"),
&"open": SubResource("Animation_bclac"),
&"unlock": SubResource("Animation_l67we")
}

[node name="Door" type="Area2D"]
monitorable = false
script = ExtResource("1_i7dw7")

[node name="SpriteDoor" type="Sprite2D" parent="."]
texture = ExtResource("2_l50cf")

[node name="SpriteBolt" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_lawn3")

[node name="SpriteLock" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_d61lu")

[node name="DoorEnterShape" type="CollisionShape2D" parent="."]
position = Vector2(0.75, -14)
scale = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_rrf83")

[node name="LockBody" type="StaticBody2D" parent="."]

[node name="LockShape" type="CollisionShape2D" parent="LockBody"]
position = Vector2(0, -14.5)
shape = SubResource("RectangleShape2D_vrqlg")

[node name="DoorCheck" type="Area2D" parent="."]
monitorable = false

[node name="DoorCheckShape" type="CollisionShape2D" parent="DoorCheck"]
position = Vector2(0, 20)
shape = SubResource("RectangleShape2D_rs5pt")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1issr")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
